[FEAT] train_continue.py 추가 및 오타 수정

--- a/make_json.ipynb
+++ b/make_json.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# json에서 \"\" 로 단어가 아닌 점섬을 박스로 치는 경우를 아애 제거 시켜버린다"
+    "# json에서 \"\" 로 단어가 아닌 점선을 박스로 치는 경우를 아예 제거 시켜버린다"
    ]
   },
   {
